# mecode

./: .gitignore  README.md  mewcode.yaml.example  pyproject.toml
.easycode/: settings.json
mewcode/: __init__.py  __main__.py  main.py  system_prompt.py
scripts/: verify_agent_loop.py  verify_cache_hit.py  verify_commands.py  verify_compaction.py  verify_instructions.py  verify_mcp.py  verify_memory.py  verify_permissions.py  verify_plan_mode.py  verify_round_loop.py  verify_system_prompt.py  verify_t10.py  verify_t11.py  verify_t12_t13.py  verify_t15.py  verify_t18.py  verify_t18_config_errors.py  verify_t19.py  verify_t9.py
tests/: test_agent_events.py  test_anthropic_cache.py  test_blocklist.py  test_blocks.py  test_chat_round_loop.py  test_command_dispatch.py  test_command_registry.py  test_command_review.py  test_command_views.py  test_compact_command.py  test_compaction_compactor.py  test_compaction_lightweight.py  test_compaction_summarizer.py  test_compaction_tokens.py  test_completer.py  test_config_loader.py  test_instructions_command.py  test_instructions_include.py  test_instructions_loader.py  test_mcp_adapter.py  test_mcp_client.py  test_mcp_config.py  test_mcp_manager.py  test_mcp_protocol.py  test_mcp_transport_http.py  test_mcp_transport_stdio.py  test_memory_agent_integration.py  test_memory_index.py  test_memory_manager.py  test_memory_notes.py  test_permissions_command.py  test_permissions_interactive.py  test_permissions_loader.py  test_permissions_policy.py  test_permissions_rules.py  test_plan_mode.py  test_provider_registry.py  (+16 more)
(+122 files in other folders)
