[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mewcode"
version = "0.1.0"
description = "终端 AI 编程助手 —— 第一阶段：纯对话 REPL"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "prompt_toolkit>=3.0",
    "rich>=13.0",
    "PyYAML>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
]

[project.scripts]
mewcode = "mewcode.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mewcode*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
